fix(rux-pop-up-menu): add spacing design tokens and align to astro design
* apply styles for testing

* adjustments to menu and popup

* add changeset and adjust padding

--- a/packages/web-components/src/components/rux-menu-item/rux-menu-item.scss
+++ b/packages/web-components/src/components/rux-menu-item/rux-menu-item.scss
@@ -28,11 +28,16 @@
 
 .rux-menu-item {
     position: relative;
-    padding: 6px 8px;
-    color: var(--color-interactive-default);
+    padding: var(--spacing-2); //8
+    color: var(--color-text-interactive-default);
+    font-family: var(--font-control-body-1-font-family);
+    font-size: var(--font-control-body-1-font-size);
+    font-weight: var(--font-control-body-1-font-weight);
+    line-height: var(--font-control-body-1-line-height);
+    letter-spacing: var(--font-control-body-1-letter-spacing);
     cursor: pointer;
     &:hover {
-        color: var(--color-interactive-hover);
+        color: var(--color-text-interactive-hover);
         background: var(--color-background-base-hover);
     }
     &--selected {
